crates/textweaver-cite/tests/snapshots/formatting__apa_html.snap
---
source: crates/textweaver-cite/tests/formatting.rs
expression: "render(\"apa\", OutputFormat::Html)"
---
style: APA Style 7th edition
citations:
  [@kucsko2013] => (Kucsko et al., 2013)
  [@dahl1988, p. 12] => (Dahl, 1988, p. 12)
  [see @smyth2007, pp. 5-6; also @vangogh2020] => (see Smyth, 2007, pp. 5–6; also van Gogh &amp; The Accessible Reading Group, 2020)
  @muller2019 [chap. 3] => Müller (2019, Chapter 3)
  [@who2021; -@access2024] => (World Health Organization, 2021; 2024)
  [@nobody2000] => (<strong>missing reference nobody2000</strong>)
missing: nobody2000
bibliography of cited works:
  [dahl1988] Dahl, R. (1988). <i>Fantastic Mr. Fox</i>. Puffin.
  [access2024] Doe, J. (2024, January 15). <i>Designing for keyboard and screen reader users</i>. Accessibility Notes. <a href="https://example.org/notes/keyboard">https://example.org/notes/keyboard</a>
  [kucsko2013] Kucsko, G., Maurer, P. C., &amp; Yao, N. Y. (2013). Nanometre-scale thermometry in a living cell. <i>Nature</i>, <i>500</i>(7460), 54–58. <a href="https://doi.org/10.1038/nature12373">https://doi.org/10.1038/nature12373</a>
  [muller2019] Müller, J. (2019). <i>Hörbücher und Sprachsynthese</i> [PhD thesis]. Universität Wien.
  [smyth2007] Smyth, B. (2007). Adventures in personalized information access. In C. Conati &amp; K. McCoy (Eds.), <i>User Modeling 2007</i> (pp. 5–6). Springer. <a href="https://doi.org/10.1007/978-3-540-74958-5_4">https://doi.org/10.1007/978-3-540-74958-5_4</a>
  [vangogh2020] van Gogh, V., &amp; The Accessible Reading Group. (2020). Screen readers and the reading of mathematics. In <i>Proceedings of the Conference on Accessible Reading</i> (pp. 101–110). Accessible Press.
  [who2021] World Health Organization. (2021). <i>World report on vision &amp; print disability</i> (WHO/2021.1). World Health Organization. <a href="https://example.org/who_report?id=1&amp;lang=en">https://example.org/who_report?id=1&amp;lang=en</a>
whole library:
  [dahl1988] Dahl, R. (1988). <i>Fantastic Mr. Fox</i>. Puffin.
  [access2024] Doe, J. (2024, January 15). <i>Designing for keyboard and screen reader users</i>. Accessibility Notes. <a href="https://example.org/notes/keyboard">https://example.org/notes/keyboard</a>
  [kucsko2013] Kucsko, G., Maurer, P. C., &amp; Yao, N. Y. (2013). Nanometre-scale thermometry in a living cell. <i>Nature</i>, <i>500</i>(7460), 54–58. <a href="https://doi.org/10.1038/nature12373">https://doi.org/10.1038/nature12373</a>
  [muller2019] Müller, J. (2019). <i>Hörbücher und Sprachsynthese</i> [PhD thesis]. Universität Wien.
  [smyth2007] Smyth, B. (2007). Adventures in personalized information access. In C. Conati &amp; K. McCoy (Eds.), <i>User Modeling 2007</i> (pp. 5–6). Springer. <a href="https://doi.org/10.1007/978-3-540-74958-5_4">https://doi.org/10.1007/978-3-540-74958-5_4</a>
  [vangogh2020] van Gogh, V., &amp; The Accessible Reading Group. (2020). Screen readers and the reading of mathematics. In <i>Proceedings of the Conference on Accessible Reading</i> (pp. 101–110). Accessible Press.
  [who2021] World Health Organization. (2021). <i>World report on vision &amp; print disability</i> (WHO/2021.1). World Health Organization. <a href="https://example.org/who_report?id=1&amp;lang=en">https://example.org/who_report?id=1&amp;lang=en</a>
