crates/textweaver-cite/tests/snapshots/formatting__mla_plain.snap
---
source: crates/textweaver-cite/tests/formatting.rs
expression: "render(\"mla\", OutputFormat :: Plain)"
---
style: MLA Handbook 9th edition (in-text citations)
citations:
  [@kucsko2013] => (Kucsko et al.)
  [@dahl1988, p. 12] => (Dahl 12)
  [see @smyth2007, pp. 5-6; also @vangogh2020] => (see Smyth 5–6; also van Gogh and The Accessible Reading Group)
  @muller2019 [chap. 3] => Müller (ch. 3)
  [@who2021; -@access2024] => (World Health Organization)
  [@nobody2000] => (missing reference nobody2000)
missing: nobody2000
bibliography of cited works:
  [dahl1988] Dahl, Roald. Fantastic Mr. Fox. Puffin, 1988.
  [access2024] Doe, Jane. “Designing for Keyboard and Screen Reader Users.” Accessibility Notes, 15 Jan. 2024, https://example.org/notes/keyboard.
  [kucsko2013] Kucsko, G., et al. “Nanometre-Scale Thermometry in a Living Cell.” Nature, vol. 500, no. 7460, July 2013, pp. 54–58, https://doi.org/10.1038/nature12373.
  [muller2019] Müller, Jörg. Hörbücher und Sprachsynthese. 2019. Universität Wien, PhD thesis.
  [smyth2007] Smyth, Barry. “Adventures in Personalized Information Access.” User Modeling 2007, edited by Cristina Conati and Kathleen McCoy, Springer, 2007, pp. 5–6, https://doi.org/10.1007/978-3-540-74958-5_4. Lecture Notes in Computer Science.
  [vangogh2020] van Gogh, Vincent, and The Accessible Reading Group. “Screen Readers and the Reading of Mathematics.” Proceedings of the Conference on Accessible Reading, Accessible Press, 2020, pp. 101–10.
  [who2021] World Health Organization. World Report on Vision & Print Disability. WHO/2021.1, World Health Organization, 4 Mar. 2021, https://example.org/who_report?id=1&lang=en.
whole library:
  [dahl1988] Dahl, Roald. Fantastic Mr. Fox. Puffin, 1988.
  [access2024] Doe, Jane. “Designing for Keyboard and Screen Reader Users.” Accessibility Notes, 15 Jan. 2024, https://example.org/notes/keyboard.
  [kucsko2013] Kucsko, G., et al. “Nanometre-Scale Thermometry in a Living Cell.” Nature, vol. 500, no. 7460, July 2013, pp. 54–58, https://doi.org/10.1038/nature12373.
  [muller2019] Müller, Jörg. Hörbücher und Sprachsynthese. 2019. Universität Wien, PhD thesis.
  [smyth2007] Smyth, Barry. “Adventures in Personalized Information Access.” User Modeling 2007, edited by Cristina Conati and Kathleen McCoy, Springer, 2007, pp. 5–6, https://doi.org/10.1007/978-3-540-74958-5_4. Lecture Notes in Computer Science.
  [vangogh2020] van Gogh, Vincent, and The Accessible Reading Group. “Screen Readers and the Reading of Mathematics.” Proceedings of the Conference on Accessible Reading, Accessible Press, 2020, pp. 101–10.
  [who2021] World Health Organization. World Report on Vision & Print Disability. WHO/2021.1, World Health Organization, 4 Mar. 2021, https://example.org/who_report?id=1&lang=en.
